rengement des fichiers sources dans un dossier separe ajout des includes dans un dossier separe et ajout d'un makefile

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -66,6 +66,7 @@ all: $(NAME)
 $(NAME): $(OBJ)
 	@ar rc $(NAME) $(OBJ)
 	@ranlib $(NAME)
+	@cp $(NAME) ../includes/
 	@printf "$(_CLEAR)$(_YELLOW) building - $(_GREEN)libft\n$(_END)"
 	@printf "$(_GREEN) Done.\n$(_END)$(_SHOW_CURS)"
 
@@ -80,6 +81,7 @@ clean:
 
 fclean: clean
 	@/bin/rm -f $(NAME)
+	@/bin/rm -f ../includes/$(NAME)
 
 re: fclean all
 
