ajout du changement de joueur au recommencement d'une partie

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -59,7 +59,7 @@ _SHOW_CURS	=$ \033[?25h
 ##   TARGETS    ##
 ##################
 
-.PHONY: all clean
+.PHONY: all clean fclean re
 
 all: $(NAME)
 
